--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,53 @@
 .App {
-  text-align: center;
+  font-weight: bold;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.result {
+  display: flex;
+  height: 200px;
+  background-color: #80808029;
+  border-radius: 10px;
+  margin: 10px;
+  border: 1px solid black;
+  text-align: center;
+  align-items: center;
 }
+
+.result>span {
+  flex: 1;
+}
+
+
+.calculatorForm {
+  display: flex;
+  background-color: #80808029;
+  justify-content: space-evenly;
+  padding: 20px;
+  margin: 10px;
+  border-radius: 10px;
+  border: 1px solid black;
+}
+
+.submit {
+  border-radius: 10px;
+  width: 50px;
+  height: 25px;
+  border: 1px solid #0080003d;
+  background-color: #0080003d;
+}
+
+.amountInput > label{
+    padding-right: 20px;
+}
+
+.amountInput input, .durationInput input {
+  height: 20px;
+}
+
+.durationInput > label {
+  padding-right: 20px;
+}
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
