--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@
   border-radius: 10px;
   width: 50px;
   height: 25px;
+  cursor: pointer;
   border: 1px solid #0080003d;
   background-color: #0080003d;
 }
@@ -42,6 +43,10 @@
 
 .amountInput input, .durationInput input {
   height: 20px;
+}
+
+input:invalid {
+  border: 1px solid red;
 }
 
 .durationInput > label {
